--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Music Generator</title>
+    <title>a</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Generate a Song from Your Spotify Playlist</h1>
-    <button id="loginBtn">Login with Spotify</button>
+    <h1>a</h1>
+    <button id="loginBtn">login</button>
     <div id="playlistSelection" style="display: none">
       <h2>Select a Playlist</h2>
       <select id="playlistDropdown"></select>
