--- a/index.html
+++ b/index.html
@@ -3,20 +3,186 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>a</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>SRhythm</title>
+    <style>
+      /* Simple CSS for layout */
+      body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+      }
+      .game-container {
+        text-align: center;
+      }
+      button {
+        padding: 10px 20px;
+        font-size: 16px;
+      }
+      #score {
+        font-size: 24px;
+      }
+      #lives {
+        font-size: 18px;
+        color: red;
+      }
+    </style>
   </head>
   <body>
-    <h1>a</h1>
-    <button id="loginBtn">login</button>
-    <div id="playlistSelection" style="display: none">
-      <h2>Select a Playlist</h2>
-      <select id="playlistDropdown"></select>
-      <button id="generateSongBtn">Generate Song</button>
+    <div class="game-container">
+      <h1>Beep Boop Doesn't Work</h1>
+      <button id="loginBtn">Sign in</button>
+      <div id="game" style="display: none">
+        <h2>Select Playlist</h2>
+        <select id="playlistDropdown"></select
+        ><br /><br />
+        <button id="startGameBtn">Start Game</button>
+      </div>
+      <div id="inGame" style="display: none">
+        <h2>Guess the Song</h2>
+        <audio id="audioPlayer" controls></audio>
+        <select id="songDropdown"></select
+        ><br /><br />
+        <button id="submitGuessBtn">Submit Guess</button>
+        <p id="score">Score: 0</p>
+        <p id="lives">Lives: 3</p>
+      </div>
     </div>
-    <p id="status"></p>
-    <audio id="generatedSong" controls></audio>
 
-    <script src="script.js"></script>
+    <script src="https://sdk.scdn.co/spotify-player.js"></script>
+    <script>
+      let accessToken;
+      let currentPlaylist;
+      let currentSong;
+      let score = 0;
+      let lives = 3;
+
+      document
+        .getElementById("loginBtn")
+        .addEventListener("click", loginToSpotify);
+      document
+        .getElementById("startGameBtn")
+        .addEventListener("click", startGame);
+      document
+        .getElementById("submitGuessBtn")
+        .addEventListener("click", checkGuess);
+
+      function loginToSpotify() {
+        // Redirect to Spotify's authentication page
+        window.location.href =
+          "https://accounts.spotify.com/authorize?client_id=518660d4be8a4f60a36e270afefa1d6d&response_type=token&redirect_uri=https://akashsaran.github.io/SRhythm/&scope=playlist-read-private";
+      }
+
+      function startGame() {
+        // Fetch the playlists after successful login and show them
+        fetchPlaylists().then((playlists) => {
+          const playlistDropdown = document.getElementById("playlistDropdown");
+          playlists.forEach((playlist) => {
+            const option = document.createElement("option");
+            option.value = playlist.id;
+            option.textContent = playlist.name;
+            playlistDropdown.appendChild(option);
+          });
+          currentPlaylist = playlists[0]; // Select the first playlist by default
+          document.getElementById("game").style.display = "none";
+          document.getElementById("inGame").style.display = "block";
+        });
+      }
+
+      function fetchPlaylists() {
+        return fetch("https://api.spotify.com/v1/me/playlists", {
+          headers: {
+            Authorization: `Bearer ${accessToken}`,
+          },
+        })
+          .then((response) => response.json())
+          .then((data) => data.items);
+      }
+
+      function startNewSong() {
+        // Get a random song from the selected playlist and play the first second
+        fetch(
+          `https://api.spotify.com/v1/playlists/${currentPlaylist.id}/tracks`,
+          {
+            headers: {
+              Authorization: `Bearer ${accessToken}`,
+            },
+          }
+        )
+          .then((response) => response.json())
+          .then((data) => {
+            const track =
+              data.items[Math.floor(Math.random() * data.items.length)].track;
+            currentSong = track;
+            document.getElementById("audioPlayer").src = track.preview_url;
+            document.getElementById("audioPlayer").play();
+            updateSongDropdown(data.items.map((item) => item.track.name));
+          });
+      }
+
+      function updateSongDropdown(songList) {
+        const songDropdown = document.getElementById("songDropdown");
+        songDropdown.innerHTML = ""; // Clear existing options
+        songList.forEach((song) => {
+          const option = document.createElement("option");
+          option.textContent = song;
+          songDropdown.appendChild(option);
+        });
+      }
+
+      function checkGuess() {
+        const selectedSong = document.getElementById("songDropdown").value;
+        const songName = currentSong.name;
+
+        if (selectedSong === songName) {
+          // Correct answer
+          updateScoreAndLives(true);
+          startNewSong();
+        } else {
+          // Incorrect answer
+          updateScoreAndLives(false);
+        }
+      }
+
+      function updateScoreAndLives(isCorrect) {
+        if (isCorrect) {
+          // Correct guess
+          score += 1000; // Adjust the score based on the time
+          document.getElementById("score").textContent = `Score: ${score}`;
+        } else {
+          // Incorrect guess
+          lives -= 1;
+          document.getElementById("lives").textContent = `Lives: ${lives}`;
+
+          if (lives <= 0) {
+            // Game over
+            alert("Game over! Final Score: " + score);
+            resetGame();
+          }
+        }
+      }
+
+      function resetGame() {
+        lives = 3;
+        score = 0;
+        document.getElementById("score").textContent = `Score: ${score}`;
+        document.getElementById("lives").textContent = `Lives: ${lives}`;
+        document.getElementById("inGame").style.display = "none";
+        document.getElementById("game").style.display = "block";
+      }
+
+      // Handle token after redirect
+      if (window.location.hash) {
+        const hash = window.location.hash.substring(1);
+        const params = new URLSearchParams(hash);
+        accessToken = params.get("access_token");
+        document.getElementById("loginBtn").style.display = "none";
+        document.getElementById("game").style.display = "block";
+      }
+    </script>
   </body>
 </html>
