--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Spotify Playlist Player</title>
+    <title>Playlist Player</title>
     <style>
       body {
         font-family: Arial, sans-serif;
@@ -22,8 +22,8 @@
     </style>
   </head>
   <body>
-    <h1>Spotify Playlist Player</h1>
-    <button id="loginBtn">Sign in with Spotify</button>
+    <h1>Playlist Player</h1>
+    <button id="loginBtn">Sign in</button>
     <div id="playlistContainer" style="display: none">
       <h2>Select Playlist</h2>
       <select id="playlistDropdown"></select
